welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: ')' expected but 'if' found.
		if(nums(indexOfValue(nums,6))==nums(indexOfValue(nums,7))){
                ^